# python-profile

./: Makefile  pyproject.toml
cases/case1/: main.py  variable_scope.py
cases/case2/: config.py  loader.py  main.py
cases/case3/: inject.py  main.py
cases/case4/: main.py
cases/case5/: main.py
cases/case6/: main.py  static_method.py
cases/case7/: main.py
results/: case1.txt  case3.txt
