[tool.poetry]
name = "python-profile"
version = "0.1.0"
description = ""
authors = ["purplehaze <yosuke.otosu@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
memory-profiler = "^0.60.0"
psutil = "^5.9.0"
injector = "^0.19.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"

[tool.black]
line-length = 119

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
